--- a/Areas/Farmer/Views/FarmerShop/CreateReview.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/CreateReview.cshtml
@@ -2,17 +2,20 @@
 @{
     ViewData["Title"] = "Write a Review";
 }
+<div class="container mt-5">
 
-<h4>Write a Review</h4>
 
-<form asp-action="CreateReview" method="post">
-    <div class="form-group mt-5" style="padding:10px">
+<h4 class="text-center">Write a Review</h4>
+<div class="card shadow-border w-70">
+
+<form asp-action="CreateReview" method="post" class="mt-2 mb-2" style="margin-left:20px; padding 5px">
+    <div class="form-group mt-2" style="padding:5px">
         <label for="comment" style="margin-bottom:10px">Comment:</label>
         <textarea class="form-control" id="comment" name="Comment" rows="3" required></textarea>
     </div>
-    <div class="form-group mt-5" style="padding:10px">
+    <div class="form-group mt-2 d-flex justify-content-center" style="padding:5px">
         <label for="rating" style="margin-bottom:10px">Rating (1-5):</label>
-        <br />
+    
         <div class="stars">
             <input type="radio" id="star5" name="Rating" value="5" required /><label for="star5">&#9733;</label>
             <input type="radio" id="star4" name="Rating" value="4" /><label for="star4">&#9733;</label>
@@ -24,14 +27,17 @@
     <input type="hidden" name="FarmerShopId" value="@ViewBag.FarmerShopId" />
 
     <div class="form-group">
-        <button type="submit" style="margin-left:9px" class="btn btn-warning">Submit Review</button>
+        <button type="submit" style="margin-left:9px; margin-right:10px; font-size:20px" class="btn btn-warning">Submit Review</button>
     </div>
 </form>
+</div>
+
+</div>
 
 <style>
     .stars {
         display: flex;
-        flex-direction: row-reverse;
+       
         justify-content: flex-start;
     }
 
