--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -582,7 +582,7 @@
                                             <li><a href="blog.html">Blog</a></li>
                                             <li><a href="#">Portfolio</a></li>
                                             <li><a href="#">Conditions</a></li>
-                                            <li><a href="#"> Frequently Questions</a></li>
+                                            <li><a asp-area="Customer" asp-controller="Feedback" asp-action="Create"> Feedback</a></li>
 
                                         </ul>
                                     </div>
