--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -705,6 +705,52 @@
     </script>
 
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $(document).on('click', '.add-to-favorites', function () {
+                var shopId = $(this).data('shop-id');
+                console.log("Shop ID: " + shopId);
+
+                $.ajax({
+                    url: '@Url.Action("AddToFavorites", "Favorites", new { area = "Customer" })',
+                    type: 'POST',
+                    data: { shopId: shopId },
+                    success: function () {
+                        alert('Shop added to favorites.');
+                    },
+                    error: function () {
+                        alert('Error occurred while adding shop to favorites.');
+                    }
+                });
+            });
+        });
+
+
+
+
+            $(document).on('click', '.remove-from-favorites', function () {
+                var shopId = $(this).data('shop-id');
+                console.log(shopId); 
+                $.ajax({
+                url: '@Url.Action("RemoveFromFavorites", "Favorites", new { area = "Customer" })',
+                    type: 'POST',
+                    data: { shopId: shopId },
+                    success: function () {
+                        alert('Shop removed from favorites.');
+                        location.reload();
+                    },
+                    error: function () {
+                        alert('Error occurred while removing shop from favorites.');
+                    }
+                });
+            });
+        });
+    </script>
+
+
+
 
 
 
