--- a/Areas/Farmer/Views/FarmerShop/Shop.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Shop.cshtml
@@ -640,14 +640,14 @@ else
     $(document).ready(function () {
         $(document).on('click', '.add-to-favorites', function () {
             var shopId = $(this).data('shop-id');
-            // console.log("Shop ID: " + shopId);
+           // console.log("Shop ID: " + shopId);
 
             $.ajax({
                 url: '@Url.Action("AddToFavorites", "Favorites", new { area = "Customer" })',
                 type: 'POST',
                 data: { shopId: shopId },
                 success: function () {
-                    // alert('Shop added to favorites.');
+                    alert('Shop added to favorites.');
                 },
                 error: function () {
                     alert('Error occurred while adding shop to favorites.');
