--- a/Views/Shared/Extra/_Layout1.cshtml
+++ b/Views/Shared/Extra/_Layout1.cshtml
@@ -98,6 +98,7 @@
 
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+      
 
             <li>
             <!-- Sidebar - Brand -->
@@ -147,51 +148,22 @@
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Setting</span>
                 </a>
-                @* <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                     data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
-                    </div>
-                </div> *@
+               
             </li>
 
-            <!-- Divider -->
+    
             <hr class="sidebar-divider">
 
-            <!-- Heading -->
             <div class="sidebar-heading">
                 Shop
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
-          @*   <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                   aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Order</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                    </div>
-                </div>
-            </li> *@
+       
 
              @if (userRole == "Customer")
             {
 
-                <!-- Nav Item - Charts -->
+      
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Customer"  asp-controller="Order"  asp-action="UserOrders">
                         <i class="fa-solid fa-bag-shopping"></i>
@@ -199,18 +171,18 @@
                     </a>
                 </li>
 
-                <!-- Nav Item - Tables -->
+    
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="Customer" asp-controller="Order" asp-action="UserOrders">
+                    <a class="nav-link" asp-area="Customer" asp-controller="Favorites" asp-action="FavoriteShop">
                     <i class="fa-solid fa-heart"></i>
-                    <span>Wish List</span>
+                    <span>My Favorite</span>
                 </a>
             </li>
             }
             @if (userRole == "Farmer")
             {
 
-                <!-- Nav Item - Charts -->
+     
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Farmer" asp-controller="FarmerShop" asp-action="Index">
                         <i class="fa-solid fa-shop"></i>
@@ -218,7 +190,7 @@
                     </a>
                 </li>
 
-                <!-- Nav Item - Tables -->
+                
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Farmer" asp-controller="Inventory" asp-action="AllOrdersGroupedByDate">
                         <i class="fa-solid fa-truck-moving"></i>
@@ -239,7 +211,7 @@
             @if (userRole == "Rider")
             {
 
-                <!-- Nav Item - Charts -->
+          
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Rider"  asp-controller="Rider" asp-action="Index">
                         <i class="fa-solid fa-truck"></i>
@@ -247,7 +219,7 @@
                     </a>
                 </li>
 
-                <!-- Nav Item - Tables -->
+
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index">
                         <i class="fa-solid fa-bag-shopping"></i>
@@ -268,7 +240,7 @@
             @if (userRole == "Admin")
             {
 
-                <!-- Nav Item - Charts -->
+        
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Customer"  asp-controller="User" asp-action="Index">
                         <i class="fa-solid fa-people-roof"></i>
@@ -305,7 +277,7 @@
             @if (userRole == "SuperAdmin")
             {
 
-                <!-- Nav Item - Charts -->
+ 
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="Index">
                         <i class="fa-solid fa-people-roof"></i>
